# ur-rtde-mcp

./: .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml  ur5_full_test_report_20260325_083426.txt  ur5_system_test_report_20260325_082746.txt
config/: mcp_config.json
src/: robotiq_gripper.py  ur_rtde_bridge.py  ur_rtde_mcp_server.py
tests/: diagnose_failures.py  failure_analysis_report.md  full_function_test.py  system_test_moveJ_IK.py  test_robotiq_gripper.py  test_ur_rtde_bridge.py
